# src/liveChat/server/docs/swagger.yaml
@@ -1,3 +1,10 @@
+definitions:
+  model.ResponseData:
+    properties:
+      data: {}
+      status:
+        type: integer
+    type: object
 info:
   contact: {}
 paths:
@@ -12,6 +19,77 @@ paths:
           description: OK
           schema:
             type: string
+      summary: 获取用户列表
       tags:
-      - 首页
+      - 用户模块
+  /user/DeleteUser:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: 用户id
+        in: query
+        name: id
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+      summary: 删除用户
+      tags:
+      - 用户模块
+  /user/userRegistry:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 用户名
+        in: query
+        name: userName
+        type: string
+      - description: 密码
+        in: query
+        name: password
+        type: string
+      - description: 确认密码
+        in: query
+        name: repassword
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ResponseData'
+      summary: 用户注册
+      tags:
+      - 用户模块
 swagger: "2.0"
