# src/liveChat/server/model/response-data.go
@@ -1,0 +1,6 @@
+package model
+
+type ResponseData struct {
+	Status int
+	Data   interface{}
+}
