# src/liveChat/server/router/app.go
@@ -1,9 +1,10 @@
 package router
 
 import (
-	"github.com/gin-gonic/gin"
 	"liveChat/server/controller"
 	"liveChat/server/docs"
+
+	"github.com/gin-gonic/gin"
 
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -14,5 +15,7 @@ func App() *gin.Engine {
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.GET("/index", controller.GetIndex)
+	r.POST("/user/userRegistry", controller.UserRegistry)
+	r.POST("/user/deleteUser/:id", controller.DeleteUser)
 	return r
 }
